--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -126,7 +126,7 @@ jobs:
       continue-on-error: true
       uses: cypress-io/github-action@v5
       with:
-        command: npm run cypress:run -- --reporter junit --reporter-options "mochaFile=cypress-results/results-[hash].xml"
+        command: npm run cypress:run -- --reporter junit --reporter-options "mochaFile=cypress/reports/results-[hash].xml"
         wait-on: 'http://localhost:3000'
         working-directory: frontend
       env:
@@ -146,7 +146,9 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: cypress-results
-        path: frontend/cypress/reports/
+        path: |
+          frontend/cypress/reports/
+          frontend/cypress/screenshots/
   
     - name: Stop services
       if: always()
@@ -181,9 +183,8 @@ jobs:
       if: always()
       with:
         files: |
-          frontend/cypress/reports/**/*.xml
-          frontend/cypress/reports/**/*.json
-          frontend/cypress/reports/**/*.html
+          frontend/cypress/reports/**/*
+          frontend/cypress/screenshots/**/*
         github_token: ${{ secrets.GITHUB_TOKEN }}
         comment_title: "End-to-End Test Results"
         check_name: "End-to-End Test Results"
@@ -198,6 +199,7 @@ jobs:
            [ "${{ steps.frontend_tests.outcome }}" == "failure" ] || \
            [ "${{ steps.cypress_tests.outcome }}" == "failure" ]; then
           echo "One or more tests failed"
+          exit 0
         else
           echo "All tests passed"
         fi
