--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Base stage for common setup
-FROM python:3.10.13-slim-bullseye as base
+FROM python:3.11-slim-bullseye as base
 
 RUN apt-get update && apt-get install -y \
   gcc \
@@ -25,14 +25,14 @@ RUN apt-get purge -y \
 # Copying the actual application, wait-for-it script, and prestart script
 COPY . /app/
 
-# Note: We mount the local directory using docker-compose so ensure these scripts also have execute permissions 
+# Note: We mount the local directory using docker-compose so ensure these scripts also have execute permissions
 # by running the following command on your host machine from the root of this project:
 # chmod +x ./backend/wait-for-it.sh ./backend/lcfs/prestart.sh ./backend/lcfs/start.sh ./backend/lcfs/start-reload.sh
 
 # Make all startup scripts executable
 RUN chmod +x /app/wait-for-it.sh /app/lcfs/prestart.sh /app/lcfs/start.sh
 
-CMD ["/app/lcfs/start.sh"]
+CMD /bin/bash /app/lcfs/start.sh
 
 # Production stage
 FROM base as prod
