--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -81,45 +81,45 @@ jobs:
         docker-compose build
         docker-compose up -d
 
-    - name: Run backend tests
-      id: backend_tests
-      continue-on-error: true
-      run: |
-        cd backend
-        poetry run pytest --junitxml=pytest-results.xml
-      env:
-        LCFS_DB_HOST: localhost
-        LCFS_DB_PORT: 5432
-        LCFS_DB_USER: lcfs
-        LCFS_DB_PASS: development_only
-        LCFS_DB_BASE: lcfs
-        LCFS_REDIS_HOST: localhost
-        LCFS_REDIS_PORT: 6379
-        LCFS_REDIS_PASSWORD: development_only
-        APP_ENVIRONMENT: test
+    # - name: Run backend tests
+    #   id: backend_tests
+    #   continue-on-error: true
+    #   run: |
+    #     cd backend
+    #     poetry run pytest --junitxml=pytest-results.xml
+    #   env:
+    #     LCFS_DB_HOST: localhost
+    #     LCFS_DB_PORT: 5432
+    #     LCFS_DB_USER: lcfs
+    #     LCFS_DB_PASS: development_only
+    #     LCFS_DB_BASE: lcfs
+    #     LCFS_REDIS_HOST: localhost
+    #     LCFS_REDIS_PORT: 6379
+    #     LCFS_REDIS_PASSWORD: development_only
+    #     APP_ENVIRONMENT: test
 
-    - name: Upload pytest results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: pytest-results
-        path: backend/pytest-results.xml
+    # - name: Upload pytest results
+    #   if: always()
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: pytest-results
+    #     path: backend/pytest-results.xml
 
-    - name: Run frontend tests
-      id: frontend_tests
-      continue-on-error: true
-      run: |
-        cd frontend
-        npm run test:run -- --reporter=junit --outputFile=vitest-results.xml
-      env:
-        CI: true
+    # - name: Run frontend tests
+    #   id: frontend_tests
+    #   continue-on-error: true
+    #   run: |
+    #     cd frontend
+    #     npm run test:run -- --reporter=junit --outputFile=vitest-results.xml
+    #   env:
+    #     CI: true
 
-    - name: Upload Vitest results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: vitest-results
-        path: frontend/vitest-results.xml
+    # - name: Upload Vitest results
+    #   if: always()
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: vitest-results
+    #     path: frontend/vitest-results.xml
 
     - name: Run Cypress tests
       id: cypress_tests
@@ -177,30 +177,30 @@ jobs:
         fail_on: "errors"
         report_individual_runs: "true"
         deduplicate_classes_by_file_name: "true"
-    - name: Process and Publish End-to-end Test Results
-      if: always()
-      run: |
-        # Process Cypress results
-        echo "End-to-End Test Results:" >> test_summary.md
-        jq -r '.stats | "Total: \(.tests), Passed: \(.passes), Failed: \(.failures)"' frontend/cypress/reports/results.json >> test_summary.md
-        
-        # Post comment to PR
-        gh pr comment ${{ github.event.pull_request.number }} --body-file test_summary.md
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    # - name: Publish End-to-End Test Results
-    #   uses: EnricoMi/publish-unit-test-result-action@v2
+    # - name: Process and Publish End-to-end Test Results
     #   if: always()
-    #   with:
-    #     files: |
-    #       frontend/cypress/reports/**/*
-    #       frontend/cypress/screenshots/**/*
-    #     github_token: ${{ secrets.GITHUB_TOKEN }}
-    #     comment_title: "End-to-End Test Results"
-    #     check_name: "End-to-End Test Results"
-    #     fail_on: "errors"
-    #     report_individual_runs: "true"
-    #     deduplicate_classes_by_file_name: "true"
+    #   run: |
+    #     # Process Cypress results
+    #     echo "End-to-End Test Results:" >> test_summary.md
+    #     jq -r '.stats | "Total: \(.tests), Passed: \(.passes), Failed: \(.failures)"' frontend/cypress/reports/results.json >> test_summary.md
+        
+    #     # Post comment to PR
+    #     gh pr comment ${{ github.event.pull_request.number }} --body-file test_summary.md
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Publish End-to-End Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      if: always()
+      with:
+        files: |
+          frontend/cypress/reports/**/*
+          frontend/cypress/screenshots/**/*
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        comment_title: "End-to-End Test Results"
+        check_name: "End-to-End Test Results"
+        fail_on: "errors"
+        report_individual_runs: "true"
+        deduplicate_classes_by_file_name: "true"
 
     - name: Check test results
       if: always()
