--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -191,44 +191,9 @@ jobs:
         fail_on: "errors"
         report_individual_runs: "true"
         deduplicate_classes_by_file_name: "true"
-    - name: Process and Publish End-to-end Test Results
-      if: always()
-      run: |
-        # Process Cypress results
-        echo "End-to-End Test Results:" >> test_summary.md
-        jq -r '.stats | "Total: \(.tests), Passed: \(.passes), Failed: \(.failures)"' frontend/cypress/reports/results.json >> test_summary.md
-        
-        # Post comment to PR
-        gh pr comment ${{ github.event.pull_request.number }} --body-file test_summary.md
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Process and Display Cypress Results
-      if: always()
-      run: |
-        # Read the results.json file
-        RESULTS=$(cat frontend/cypress/reports/results.json)
-        
-        # Extract required fields
-        TESTS=$(echo $RESULTS | jq '.stats.tests')
-        PASSES=$(echo $RESULTS | jq '.stats.passes')
-        FAILURES=$(echo $RESULTS | jq '.stats.failures')
-        DURATION=$(echo $RESULTS | jq '.stats.duration')
-        SUITES=$(echo $RESULTS | jq '.stats.suites')
-        SKIPPED=$(echo $RESULTS | jq '.stats.skipped')
-        
-        # Calculate duration in seconds
-        DURATION_SEC=$(echo "scale=2; $DURATION / 1000" | bc)
-        
-        # Format the output
-        echo "End-to-End Test Results" >> test_summary.md
-        echo "$TESTS tests  ± 0   $PASSES ✅ ±0   ${DURATION_SEC}s ⏱️ ±0s  $SUITES suites ± 0   $SKIPPED 💤 ±0  3*** files   +3***   $FAILURES ❌ ±0  3*** errors" >> test_summary.md
-        echo "For more details on these parsing errors, see this check." >> test_summary.md
-        echo "Results for commit ${GITHUB_SHA::6}***${GITHUB_SHA: -3}. ± Comparison against earlier commit ${GITHUB_BASE_REF::1}***${GITHUB_BASE_REF: -3}***${GITHUB_BASE_REF: -2}." >> test_summary.md
-        
-        # Post comment to PR
-        gh pr comment ${{ github.event.pull_request.number }} --body-file test_summary.md
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Publish Test Summary Results
+      run: npx github-actions-ctrf frontend/cypress/reports/results.json
 
     - name: Check test results
       if: always()
