--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,10 +85,10 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.0.4",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
-    "@storybook/addon-essentials": "^8.2.9",
-    "@storybook/addon-interactions": "^8.2.9",
     "@storybook/addon-a11y": "^8.2.9",
     "@storybook/addon-docs": "^8.2.9",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
     "@storybook/addon-links": "^8.2.9",
     "@storybook/addon-onboarding": "^8.2.9",
     "@storybook/addon-themes": "^8.2.9",
@@ -107,6 +107,7 @@
     "cross-env": "^7.0.3",
     "cypress": "^13.13.3",
     "cypress-axe": "^1.5.0",
+    "cypress-ctrf-json-reporter": "^0.0.11",
     "cypress-vite": "^1.5.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
