--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "storybook:build": "storybook build",
     "test": "vitest --ui",
     "test:run": "vitest run",
-    "test.coverage": "vitest --coverage",
+    "test:coverage": "vitest --coverage",
     "cypress:install": "cypress install",
     "cypress:verify": "cypress verify",
     "cypress:open": "cypress open",
